fixed-link-issue

--- a/index.html
+++ b/index.html
@@ -16,21 +16,28 @@
         class="huh"
         href="https://maps.app.goo.gl/NbphMH8iVVYqFy6d8"
         target="_blank"
-        ><span>Algiers, Algeria</span></a>
+        ><span>Algiers, Algeria</span></a
+      >
       <div class="bio">"Front-end dev and an avid reader"</div>
-      <button onclick="window.open('https:github.com/berkal749', '_blank')">
+      <button onclick="window.open('https://github.com/berkal749', '_blank')">
         Github
       </button>
-      <button onclick="window.open('https:www.frontendmentor.io/profile/berkal749', '_blank')">
+      <button
+        onclick="window.open('https://frontendmentor.io/profile/berkal749', '_blank')"
+      >
         Frontend Mentor
       </button>
-      <button onclick="window.open('https:www.linkedin.com/in/berkal-achref-el-amine-47456a368', '_blank')">
+      <button
+        onclick="window.open('https://www.linkedin.com/in/berkal-achref-el-amine-47456a368', '_blank')"
+      >
         Linkedin
       </button>
-      <button onclick="window.open('https:https:x.com/AchrefBerkal', '_blank')">
+      <button onclick="window.open('https://https:x.com/AchrefBerkal', '_blank')">
         X
       </button>
-      <button onclick="window.open('https:www.instagram.com/b.ach21/', '_blank')">
+      <button
+        onclick="window.open('https://www.instagram.com/b.ach21/', '_blank')"
+      >
         Instagram
       </button>
     </div>
